28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that writes the computed result in an OutputIterator 
  of Object

28 July 2005 Sylvain Pion
- Interval_nt : Increment number_of_failures for the CGAL::Certified operators.

28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that has Object as return value as they are needed
  by Kernel::Intersect_2


26 July 2005 Sylvain Pion
- Filtered_kernel : No need to explicitely mention To_interval as argument
  to Cartesian_converter anymore, the default argument handles it.

16 June 2005 Menelaos Karavelas
- Regular triangulation: added arithmetic filtering support for the
  nearest_power_vertex predicate

26 May 2005 Sylvain Pion
- Lazy_exact_nt : add depth() member function to compute the depth of the DAG.

11 May 2005 Sylvain Pion
- Add using Base::operator(); in static filters.

1 May 2005 Sylvain Pion
- Lazy_exact_nt : optimize operator<(), operator==() and compare() in case
  of identical variables.

26 March 2005 Sylvain Pion
- Lazy_exact_nt<ET> : allow ET == int and ET == double.
- Lazy_exact_nt<ET> : add % and gcd (kills filtering, though).
- Lazy_exact_nt<ET> : use boost/operators.hpp
- Interval_nt : add fit_in_double().

12 January 2005 Sylvain Pion
- Static filters : small correction of epsilons.

11 January 2005 Sylvain Pion
- Improve static filters : protect against overflow.

06 January 2005 Sylvain Pion
- Fix warning with VC++.

------------------------------ CGAL 3.1 ------------------------------

25 November 2004 Sylvain Pion
- x86_64 porting.

18 November 2004 Sylvain Pion
- Static filters : protect against underflow.
- Static filters : improve fit_in_double() interface.

4 November 2004 Sylvain Pion
- Static filters : yet another smallish re-optimisticization.

2 November 2004 Sylvain Pion
- Static filters : yet another smallish de-optimisticization.

29 October 2004 Sylvain Pion
- Static filters : the epsilons were a bit too optimistic for the
  homogeneization formal proof.
