@@ -259,7 +259,7 @@ int main(int argc, char **argv)
     test_side_of_oriented_sphere_3();
 
   std::cerr << "Total number of IA failures = "
-            << CGAL::Interval_nt<false>::number_of_failures << std::endl;
+            << CGAL::Interval_nt<false>::number_of_failures() << std::endl;
 
   return 0;
 }
